--- a/assets/.htaccess
+++ b/assets/.htaccess
@@ -329,7 +329,7 @@ AddDefaultCharset utf-8
     # Options +SymLinksIfOwnerMatch
 
     # (4)
-    # RewriteBase /
+    RewriteBase /
 
     # (5)
     # RewriteOptions <options>
@@ -339,6 +339,11 @@ AddDefaultCharset utf-8
     RewriteRule ^ - [env=proto:https]
     RewriteCond %{HTTPS} !=on
     RewriteRule ^ - [env=proto:http]
+
+    #RewriteMap shortcodes txt:/shortcodes.txt
+    #RewriteRule ^/(\d+)$ ${shortcodes:$1} [R=permanent,L]
+
+    #RewriteRule ^.*$ /episodes/001-lamest-superheroes/ [L]
 
 </IfModule>
 
